# CoilSnake

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  CoilSnake.py  CoilSnake.spec  CoilSnakeGUI.py  DEVELOPMENT.md  MANIFEST.in  Makefile  Project.py  README.md  Rom.py  Vagrantfile  _config.yml  coilsnake-cmd.py  coilsnake.nsi  coilsnake.py  compress.c  download.md  exhal.c  index.html  index.md  inhal.c  linux.md  modulelist.txt  params.json  pyproject.toml  readme.txt  rename_exe_with_version.py  requirements.txt  romtypes.yaml  set_git_commit.py  setup.cfg  setup.py  setup_exe.py
.github/workflows/: pyinstaller.yaml
_includes/: download-linux.md  download_section.md
_layouts/: default.html
coilsnake/: Ips.py  Progress.py  Project.py  Rom.py  data.py  data_blocks.py  error.py  exceptions.py  root.py  util.py
coilsnake/assets/: modulelist.txt
coilsnake/modules/: GenericModule.py  PatchModule.py  RawBlocksModule.py  Table.py  TablesModule.py  UsedRangeModule.py
coilsnake/resources/: romtypes.yml
coilsnake/tools/: EbRomExpander.py  csv2yml.py  damage_calc.py  trim_EBYAML.py
coilsnake/ui/: Fun.py  cli.py  common.py  formatter.py  fun.py  git_commit.py  gui.py  gui_preferences.py  gui_util.py  information.py  progressbar.py  widgets.py
games/: eb2.yml
ips/Earthbound/: batfonwidhac.ips  batfonwidhac.yml  ebpp0999.ips  runbutton.ips  runbutton.yml  show_sprites.yml
manifests/: default.pp
modules/: Fun.py  GenericModule.py  Ips.py  PatchModule.py  Progress.py  Project.py  RawBlocksModule.py  Rom.py  Table.py  TablesModule.py  UsedRangeModule.py  __init__.py
resources/: modulelist.txt  romtypes.yaml
script/: bootstrap  build  cli.py  coverage.sh  diff_projects.sh  gui.py  post_install.py  test
structures/: eb.yml
stylesheets/: custom.css  stylesheet.css
tests/: coilsnake_test.py  test_EbModule.py  test_Project.py  test_Rom.py  test_data.py  test_data_blocks.py
tools/: EbRomExpander.py  csv2yml.py  trim_EBYAML.py
(+226 files in other folders)
