[build-system]
# 62.1.0 changes the folder layout for built extensions -- we need the new layout
# (Before that, 61 is the first version supporting pyproject.toml.)
requires = ["setuptools >= 62.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coilsnake"
dynamic = ["version"]
description = "CoilSnake"
urls = {Homepage = "https://pk-hack.github.io/CoilSnake"}
requires-python = ">=3.8"
dependencies = [
    "Pillow>=3.0.0",
    "PyYAML>=3.11",
    "CCScriptWriter @ https://github.com/pk-hack/CCScriptWriter/tarball/master",
    "ccscript @ https://github.com/charasyn/ccscript_legacy/archive/refs/tags/v1.500.tar.gz",
    # ??? CoilSnake hasn't been tested on Mac in a while. Is this still needed?
    "pyobjc-framework-Cocoa; platform_system == 'Darwin'",
]

[project.scripts]
coilsnake-cli = "coilsnake.ui.cli:main"
# Comment out the next line to make CoilSnake launch with a terminal window on Windows
[project.gui-scripts]
coilsnake = "coilsnake.ui.gui:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
